--- a/themes/inhabitent-theme/sass/_page-templates.scss
+++ b/themes/inhabitent-theme/sass/_page-templates.scss
@@ -19,10 +19,9 @@
 }
 
 .site-main {
-  .post-info {
-    display: flex;
+  .post-info{
+    display:flex;
   }
-
   img {
     width: 25%;
     height: 200px;
@@ -37,6 +36,41 @@
   color: white;
 }
 
-.footer {
+//footer css
+.site-footer {
+  background-image: url('../../images/dark-wood.png');
+  color: white;
+
+  .footer-info {
+    display: flex;
+  }
+
+  .business-hours {
+    padding-left: 6em;
+  }
+
+  .copyright {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 16px;
+    padding-bottom: 2em;
+  }
+
+  h2 {
+    color: #d99054;
+    text-transform: uppercase;
+  }
+}
+
+//sidebar css
+
+.content-main {
   display: flex;
+  .content-area {
+    max-width: 70%;
+  }
+  .widget-area {
+    flex-direction: column-reverse;
+    align-items: flex-end;
+  }
 }
