--- a/themes/inhabitent-theme/style.css
+++ b/themes/inhabitent-theme/style.css
@@ -283,6 +283,48 @@ mark, ins {
 big {
   font-size: 125%; }
 
+@font-face {
+  font-family: 'Merriweather Web';
+  src: url("../../fonts/merriweather-light-webfont.eot");
+  src: url("../../fonts/merriweather-light-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/merriweather-light-webfont.woff2") format("woff2"), url("../../fonts/merriweather-light-webfont.woff") format("woff"), url("../../fonts/merriweather-light-webfont.ttf") format("truetype"), url("../../fonts/merriweather-light-webfont.svg#merriweatherlight") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Merriweather Web';
+  src: url("../../fonts/merriweather-lightitalic-webfont.eot");
+  src: url("../../fonts/merriweather-lightitalic-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/merriweather-lightitalic-webfont.woff2") format("woff2"), url("../../fonts/merriweather-lightitalic-webfont.woff") format("woff"), url("../../fonts/merriweather-lightitalic-webfont.ttf") format("truetype"), url("../../fonts/merriweather-lightitalic-webfont.svg#merriweatherlight_italic") format("svg");
+  font-weight: normal;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'Merriweather Web';
+  src: url("../../fonts/merriweather-bold-webfont.eot");
+  src: url("../../fonts/merriweather-bold-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/merriweather-bold-webfont.woff2") format("woff2"), url("../../fonts/merriweather-bold-webfont.woff") format("woff"), url("../../fonts/merriweather-bold-webfont.ttf") format("truetype"), url("../../fonts/merriweather-bold-webfont.svg#merriweatherbold") format("svg");
+  font-weight: bold;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Merriweather Web';
+  src: url("../../fonts/merriweather-bolditalic-webfont.eot");
+  src: url("../../fonts/merriweather-bolditalic-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/merriweather-bolditalic-webfont.woff2") format("woff2"), url("../../fonts/merriweather-bolditalic-webfont.woff") format("woff"), url("../../fonts/merriweather-bolditalic-webfont.ttf") format("truetype"), url("../../fonts/merriweather-bolditalic-webfont.svg#merriweatherbold_italic") format("svg");
+  font-weight: bold;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'Novecento Sans Web';
+  src: url("../../fonts/novecentosanswide-normal-webfont.eot");
+  src: url("../../fonts/novecentosanswide-normal-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/novecentosanswide-normal-webfont.woff2") format("woff2"), url("../../fonts/novecentosanswide-normal-webfont.woff") format("woff"), url("../../fonts/novecentosanswide-normal-webfont.ttf") format("truetype"), url("../../fonts/novecentosanswide-normal-webfont.svg#novecento_sans_widenormal") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Novecento Sans Web';
+  src: url("../../fonts/novecentosanswide-demibold-webfont.eot");
+  src: url("../../fonts/novecentosanswide-demibold-webfont.eot?#iefix") format("embedded-opentype"), url("../../fonts/novecentosanswide-demibold-webfont.woff2") format("woff2"), url("../../fonts/novecentosanswide-demibold-webfont.woff") format("woff"), url("../../fonts/novecentosanswide-demibold-webfont.ttf") format("truetype"), url("../../fonts/novecentosanswide-demibold-webfont.svg#novecento_sans_widedemibold") format("svg");
+  font-weight: bold;
+  font-style: normal; }
+
 /*--------------------------------------------------------------
 # Elements
 --------------------------------------------------------------*/
@@ -472,7 +514,7 @@ a {
   display: -ms-flexbox;
   display: flex;
   height: 40px;
-  position: absolute; }
+  position: fixed; }
 
 /* Small menu. */
 .menu-toggle,
@@ -515,6 +557,8 @@ a {
 
 .menu-homepage-menu-container li {
   padding: 10px; }
+  .menu-homepage-menu-container li li {
+    color: white; }
 
 /*--------------------------------------------------------------
 # Accessibility
@@ -590,6 +634,9 @@ a {
 /*--------------------------------------------------------------
 # Content
 --------------------------------------------------------------*/
+body {
+  font-family: 'Merriweather Web'; }
+
 /* Posts and pages */
 .sticky {
   display: block; }
@@ -624,6 +671,15 @@ a {
 
 .bypostauthor {
   display: block; }
+
+h2 {
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 200;
+  font-size: 35px; }
+
+.contact-sidebar i {
+  padding-top: 25px; }
 
 /*--------------------------------------------------------------
 # Media
@@ -696,18 +752,39 @@ object {
   background-position: center, center;
   height: 700px; }
 
-.about-hero-image {
-  background-image: url("../../images/about-hero.jpg");
-  height: 700px; }
-
 .site-main .post-info {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex; }
+  display: flex;
+  padding-left: 5em;
+  padding-right: 5em; }
 
-.site-main img {
-  width: 25%;
-  height: 200px; }
+.site-main .post-chunk {
+  margin: 10px;
+  border: 1px solid #a1a1a1;
+  margin-bottom: 2em; }
+
+.site-main .high-line {
+  font-size: 11px;
+  padding-right: 200px;
+  text-transform: uppercase; }
+
+.site-main .journal-title {
+  text-align: left;
+  font-size: 20px;
+  color: #248a83;
+  text-transform: uppercase;
+  font-weight: 600;
+  height: 100px;
+  font-family: 'Merriweather Web'; }
+
+h2 {
+  text-transform: uppercase;
+  font-family: 'Novecento Sans Web';
+  font-weight: 200px; }
+
+.post-data button {
+  border: solid black .5px; }
 
 .hero-image-header {
   height: 700px; }
@@ -715,23 +792,87 @@ object {
 .entry-title {
   color: white; }
 
+.latest-adventures {
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr; }
+  .latest-adventures .one {
+    background-image: url("../../images/adventure-photos/canoe-girl.jpg");
+    background-size: cover;
+    height: 600px;
+    grid-column: 1 / 2;
+    grid-row: 1 / 3; }
+  .latest-adventures .two {
+    background-image: url("../../images/adventure-photos/beach-bonfire.jpg");
+    background-size: cover;
+    grid-column: 2 / 4;
+    grid-row: 1 / 2; }
+  .latest-adventures .three {
+    background-image: url("../../images/adventure-photos/mountain-hikers.jpg");
+    background-size: cover;
+    grid-column: 2 / 3;
+    grid-row: 2 / 3; }
+  .latest-adventures .four {
+    background-image: url("../../images/adventure-photos/night-sky.jpg");
+    background-size: cover;
+    grid-column: 3 / 4;
+    grid-row: 2 / 3; }
+  .latest-adventures div {
+    border: black 2px solid;
+    height: 300px; }
+
+.shop-name {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 6em; }
+  .shop-name img {
+    width: 65px; }
+  .shop-name .product-chunk {
+    border: 1px solid #e1e1e1;
+    margin: 10px;
+    text-align: center;
+    padding: 20px;
+    border-top: 5px solid #e1e1e1; }
+    .shop-name .product-chunk p {
+      margin-bottom: 0; }
+  .shop-name .product-link {
+    background-color: #248A83;
+    width: 100px;
+    height: 35px;
+    font-size: 14px; }
+    .shop-name .product-link a {
+      text-decoration: none;
+      color: white; }
+
 .site-footer {
-  background-image: url("../../images/dark-wood.png");
-  color: white; }
+  background-image: url("../../logos/inhabitent-logo-text.svg"), url("../../images/dark-wood.png");
+  background-repeat: no-repeat, repeat;
+  background-size: 250px,auto;
+  background-position: 900px 55px;
+  color: white;
+  height: 350px; }
   .site-footer .footer-info {
     display: -webkit-box;
     display: -ms-flexbox;
-    display: flex; }
+    display: flex;
+    padding-left: 8em;
+    padding-top: 2em; }
   .site-footer .business-hours {
     padding-left: 6em; }
   .site-footer .copyright {
     text-align: center;
     text-transform: uppercase;
     font-size: 16px;
-    padding-bottom: 2em; }
+    padding-top: 50px;
+    margin-bottom: 0; }
   .site-footer h2 {
     color: #d99054;
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    font-size: 18px; }
 
 .content-main {
   display: -webkit-box;
@@ -746,4 +887,78 @@ object {
             flex-direction: column-reverse;
     -webkit-box-align: end;
         -ms-flex-align: end;
-            align-items: flex-end; }
+            align-items: flex-end;
+    width: 30%;
+    border-left: 1px solid #e1e1e1;
+    margin-top: 40px;
+    text-align: left;
+    padding-left: 40px; }
+    .content-main .widget-area ul {
+      list-style-type: none; }
+    .content-main .widget-area h2 {
+      font-size: 25px;
+      font-weight: 800;
+      text-align: left; }
+
+.widget ul {
+  margin-left: 0;
+  padding-left: 0; }
+
+.entry-title {
+  color: black; }
+
+.archive .shop-loop {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap; }
+
+.archive article {
+  width: 25%; }
+
+.page-title, .taxonomy-description {
+  display: none; }
+
+.blog .entry-title {
+  position: relative;
+  bottom: 450px;
+  left: -70px;
+  font-size: 25px; }
+
+.blog .site-content {
+  text-align: center; }
+
+.blog .content-area {
+  margin-top: 40px; }
+
+.single {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+  .single .content-area {
+    width: 70%; }
+  .single .widget-area {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    width: 30%;
+    border-left: 1px solid #e1e1e1;
+    margin-top: 30px;
+    padding-top: 100px;
+    text-align: left; }
+
+.about-hero-image {
+  background-image: url("../../images/about-hero.jpg");
+  height: 700px;
+  background-size: cover; }
+
+.page {
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
