--- a/themes/inhabitent-theme/sass/_content.scss
+++ b/themes/inhabitent-theme/sass/_content.scss
@@ -67,3 +67,17 @@ h2{
     padding-top:25px;
   }
 }
+
+.tent_biz_hours-class{
+  font-size:14px;}
+  .day-of-week{
+    font-weight:800px;
+  }
+
+  .widget_archive{
+   a{
+    color:#248A83;
+    text-decoration:none;
+   }
+
+  }
