--- a/themes/inhabitent-theme/sass/_page-templates.scss
+++ b/themes/inhabitent-theme/sass/_page-templates.scss
@@ -5,8 +5,8 @@
 /* Front-page */
 
 .front-hero-image {
-  background-image: url('../../logos/inhabitent-logo-full.svg'),
-    url('../../images/home-hero.jpg');
+  background-image:url('../../logos/inhabitent-logo-full.svg'),
+ url('../../images/home-hero.jpg');
   background-repeat: no-repeat, no-repeat;
   background-size: auto, cover;
   background-position: center, center;
@@ -18,20 +18,22 @@
 
   .post-info{
     display:flex;
-    padding-left: 5em;
-    padding-right: 5em;
+    padding-left: 8em;
+    padding-right: 8em;
     
   }
   .post-chunk{
     margin: 10px;
-    border: 1px solid #a1a1a1;
+    border:1px solid #e1e1e1;
     margin-bottom: 2em;
   
   }
   .high-line{
     font-size: 11px;
-    padding-right: 200px;
     text-transform: uppercase;
+    display:flex;
+    padding-top: 5px;
+    padding-left: 10px;
   }
   .journal-title{
         text-align: left;
@@ -39,8 +41,9 @@
         color: #248a83;
         text-transform: uppercase;
         font-weight: 600;
-        height: 100px;
-        font-family: 'Merriweather Web';
+        height: 70px;
+        font-family: 'Novecento Sans Web';
+        padding-left: 10px;
     }
   }
  
@@ -49,13 +52,28 @@ h2{
   text-transform:uppercase;
   font-family: 'Novecento Sans Web';
   font-weight:200px;
+  
 }
 .post-data{
 
   button{
     border: solid black .5px;
-  }
+    display: flex;
+    margin-left: 10px;
+    height: 35px;
 }
+a{
+  color: #000;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: 100;
+  font-size: 12px;
+  width: 100px;
+}
+  }
+
+
+
 
 
 .hero-image-header {
@@ -66,7 +84,15 @@ h2{
   color: white;
 }
 
-
+.adventure-but{
+  margin-right: 875px;
+  margin-bottom: 5em;
+  background-color: #248a83;
+  height: 45px;
+  width: 200px;
+  text-transform: uppercase;
+  color: #fff;
+}
 
  
 .latest-adventures{
@@ -74,6 +100,23 @@ h2{
   grid;
   grid-template-columns: 2fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
+  margin-left: 3em;
+  margin-bottom: 1em;
+  margin-right:3em;
+    font-size: 40px;
+    color: white;
+    text-align: left;
+
+    button{
+      background-color: Transparent;
+      color:white;
+      text-transform:
+      uppercase;    
+      height: 35px;
+      margin-top: 15px;
+      display: block;
+    }
+ 
   
   .one{
     background-image: url('../../images/adventure-photos/canoe-girl.jpg');
@@ -81,13 +124,22 @@ h2{
     height: 600px;
     grid-column: 1 / 2;
     grid-row: 1 / 3;
+    border-right:10px solid white;padding-top: 1em;
+    padding-left: 1em;
+    padding-right: 2em;
+    background-color: rgba(0,0,0,.35);
   }
 
   .two{
+    border-left: 10px white solid;
+    border-bottom: 20px solid white;
     background-image: url('../../images/adventure-photos/beach-bonfire.jpg');
     background-size: cover;
     grid-column: 2 / 4;
-    grid-row: 1 / 2;
+    grid-row: 1 / 2;padding-top: 1em;
+    padding-left: 1em;
+    background-color: rgba(0,0,0,.35);
+    padding-right: 2em;
   }
 
   .three{
@@ -95,16 +147,30 @@ h2{
     background-size: cover;
     grid-column: 2 / 3;
     grid-row: 2 / 3;
+    border-left: 10px solid white;
+    background-color: rgba(0,0,0,.35);
+    border-right: 10px solid white;
+    font-size: 25px;
+    padding-top: 1em;
+    padding-left: 1em;
+    padding-right: 2em;
   }
 
   .four{
-    background-image: url('../../images/adventure-photos/night-sky.jpg');
+    background-image:url('../../images/adventure-photos/night-sky.jpg');
     background-size: cover;
     grid-column:3 / 4;
+    background-color: rgba(0,0,0,.35);
+   
     grid-row: 2 / 3;
+    border-left: 10px solid white;
+    font-size: 25px;
+    padding-top: 1em;
+    padding-left: 1em;
+    padding-right: 2em;
   }
   div{
-    border:black 2px solid;
+    
     height:300px;
     
   }
@@ -115,6 +181,8 @@ h2{
   display: flex;
   justify-content: center;
   margin: 6em;
+  margin-top: 2em;
+  margin-bottom: 2em;
   img{
     width:65px;
   }
@@ -127,13 +195,16 @@ h2{
 
     p{
       margin-bottom:0;
+      height: 105px;
     }
   }
+  
   .product-link{
     background-color:#248A83;
     width: 100px;
     height: 35px;
-    font-size: 14px;
+    font-size: 12px;
+    text-transform:uppercase;
     
     
     a{
@@ -166,9 +237,11 @@ h2{
   .copyright {
     text-align: center;
     text-transform: uppercase;
-    font-size: 16px;
+    font-size: 14px;
     padding-top: 50px;
     margin-bottom:0;
+    font-family: Novecento Sans Web;
+    font-weight: 200;
   }
 
   h2 {
@@ -185,12 +258,13 @@ h2{
   .content-area {
     max-width: 70%;
   }
+  }
   .widget-area {
     flex-direction: column-reverse;
     align-items: flex-end;
     width: 30%;
     border-left: 1px solid #e1e1e1;
-    margin-top: 40px;
+    margin-top: 55px;
     text-align: left;
     padding-left:40px;
 
@@ -202,9 +276,9 @@ h2{
       font-size: 25px;
       font-weight: 800;
       text-align:left;
+      padding-top: 40px;
     }
   }
-}
 
 .widget{
   ul{
@@ -216,35 +290,156 @@ h2{
 
 
 //** shop stuff
-.entry-title{
-  color:black;
-}
+
 
 .archive{
   .shop-loop{
-    display:flex;
-    flex-wrap: wrap;
-    
+   display:grid;
+   grid-template-columns: repeat(4,1fr);
+   border-top:1px dashed #e1e1e1;
+   margin-left:8em;
+   margin-right:8em;
+   padding-top: 2em;
+   padding-bottom: 40px;
   }
   article{
-    width:25%;
+    
+    margin:10px;
+    border:1px solid #e1e1e1;
+  }
+  h1{
+    font-size:16px;
+    display:inline;
+    color:black;
+    font-weight: 100;
+  }
+
+  .shop-info-chunk{
+    font-size: 14px;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+  }
+  .archive .site-header{
+    border-bottom: 1px solid #e1e1e1;
+  }
+
+
+.shop-push{
+  padding-top: 40px;
+  h2{
+    font-weight: 800;
   }
 }
 
-.page-title, .taxonomy-description{
-  display:none;
+.post-type-archive img{
+ 
+  height: 200px;
+}
+.post-type-archive .main-navigation a{
+  color:#248A83;
+}
+.post-type-archive .front-logo{
+  background-image: url(../../logos/inhabitent-logo-tent.svg);
 }
 
+
+
+.post-type-archive {
+
+.product-chunk{
+display:flex;
+
+justify-content: space-around;
+    margin-left: 25em;
+    margin-right: 25em;
+    margin-bottom: 2em;
+}
+.product-chunk a{
+  color:#248A83;
+  text-transform:uppercase;
+  text-decoration:none;
+  font-family: 'Novecento Sans Web';
+  font-size:18px;
+}
+}
+
+
+.tax-product_type{
+  .site-main{
+    margin-left: 2em;
+    margin-right: 2em;
+  }
+  img{
+    height:200px;
+  }
+}
+
+
+.tax-product_type .content-area{
+  padding-top: 5em;
+    
+}
+.tax-product_type .main-navigation a{
+  color:#248A83;
+}
+.tax-product_type .front-logo{
+  background-image: url(../../logos/inhabitent-logo-tent.svg);
+} 
+
+.page-title-main{
+  text-align: center;
+  font-weight: 800;
+  font-size: 35px;
+  text-transform:uppercase;
+  font-family: 'Novecento Sans Web';
+}
+.page-title{
+  text-align: center;
+}
+
+.single-product{
+  .entry-meta{
+    display:none;
+  }
+  .main-navigation a{
+    color:#248A83;
+    border-bottom: 1px solid #e1e1e1;
+  }
+  .front-logo{
+    background-image: url(../../logos/inhabitent-logo-tent.svg);
+  } 
+  
+
+}
 
 //**journal page
 
 .blog .entry-title{
-  position: relative;
-    bottom: 450px;
-    
-    left: -70px;
-    font-size: 25px;
+  position: absolute;
+  bottom: 295px;
+  left: -70px;
+  width: 450px;
+  left: 138px;
+  background-color: #248a83;
+  height: 100px;
+
+
+  a{
+    color:white;
+    font-size:30px;
+    text-decoration:none;
+  }
 }
+
+.blog .main-navigation a{
+  color:#248A83;
+}
+.blog .front-logo{
+  background-image: url(../../logos/inhabitent-logo-tent.svg);
+} 
 
 .blog{
   .site-content{
@@ -252,6 +447,9 @@ h2{
   }
   .content-area{
     margin-top: 40px;
+  }
+  .site-header{
+    border-bottom: 1px solid #e1e1e1;
   }
   }
 
@@ -265,23 +463,145 @@ h2{
     align-items: flex-end;
     width:30%;
     border-left: 1px solid #e1e1e1;
-    margin-top:30px;
-    padding-top:100px;
     text-align:left;
+    margin-top: 0;
   }
 
 }
+.entry-header{
+  position:relative;
+  padding-top: 50px;
+}
 
+.entry-meta{
+  position: absolute;
+  bottom: 65px;
+  color: #fff;
+  font-size: 14px;
+  left: 380;
+  left: 378px;
+  background-color: #248a83;
+  width: 400px;
+  text-transform: uppercase;
+}
+
+.single-main{
+  display:flex;
+  margin-top: 50px;
+
+  img{
+    width:750px;
+  }
+}
+
+.single-post{
+  .content-area{
+    padding-top: 40px;
+    margin-right: 40px;
+    margin-left: 8em;
+  }
+  .main-navigation a{
+    color:#248A83;
+    
+  }
+  .front-logo{
+    background-image: url(../../logos/inhabitent-logo-tent.svg);
+  } 
+  .main-navigation{
+    border-bottom: 1px solid #e1e1e1;
+  }
+ 
+}
+.type-post p{
+  margin-left: 9em;
+  margin-right: 2em;
+  font-size: 15px;
+  text-align: left;
+
+}
 //** about page
 
-.about-hero-image {
-  background-image: url('../../images/about-hero.jpg');
-  height: 700px;
-  background-size:cover;
-}
+// .about-hero-image {
+//   background-image: url(../../images/about-hero.jpg);
+//   height: 700px;
+//   background-size: cover;
+//   background-position-y: bottom;
+//   background-repeat: no-repeat;
+// }
+
 
 .page{
   text-align:center;
   display:flex;
 
+}
+
+
+
+.page .entry-content{
+  padding-left:10em;
+  padding-right:10em;
+}
+
+.page .entry-title{
+  display:none;
+}
+
+//**find us page
+
+.page-id-51 .main-navigation a{
+  color:#248A83;
+}
+.page-id-51 .front-logo{
+  background-image: url(../../logos/inhabitent-logo-tent.svg);
+}
+
+
+  .page-id-51{
+
+   .site-header{
+    border-bottom:1px solid #e1e1e1;
+  }
+  
+}
+  
+.title-findus{
+  padding-top: 50px;
+  margin-bottom: 0;
+  
+    
+    width: 600px;
+    
+    h2{
+      font-weight: 800;
+      text-align:left;
+      padding-left: 8em;
+    }
+}
+
+.page-id-51 .entry-content{
+  padding-left:8em;
+  text-align:left;
+
+h2{
+  font-weight:800;
+  text-align:left;
+  font-size:30px;
+  
+}
+}
+
+.wpcf7-form{
+  label{
+    text-transform:uppercase;
+    font-family: 'Novecento Sans Web';
+
+  }
+}
+
+.contact-sidebar{
+  span{
+    color:#248A83;
+    padding-left:5px;
+  }
 }
