final push for project

--- a/themes/inhabitent-theme/sass/_variables.scss
+++ b/themes/inhabitent-theme/sass/_variables.scss
@@ -14,6 +14,7 @@ $color__background-hr: #ccc;
 $color__background-pre: #eee;
 $color__background-ins: #fff9c0;
 $color__border-abbr: #666;
+$color__background:#248A83;
 
 $color__link: royalblue;
 $color__link-visited: purple;
@@ -26,3 +27,4 @@ $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
 $font__line-height-body: 1.5;
 $font__line-height-pre: 1.6;
+$font__fam-main: 'Novecento Sans Web';
