--- a/themes/inhabitent-theme/style.css
+++ b/themes/inhabitent-theme/style.css
@@ -670,6 +670,9 @@ h2 {
 .contact-sidebar i {
   padding-top: 25px; }
 
+.contact-info a {
+  color: white; }
+
 .tent_biz_hours-class {
   font-size: 14px; }
 
@@ -679,6 +682,9 @@ h2 {
 .widget_archive a {
   color: #248A83;
   text-decoration: none; }
+
+.cat-links {
+  padding-right: 15px; }
 
 /*--------------------------------------------------------------
 # Media
@@ -745,11 +751,17 @@ object {
 --------------------------------------------------------------*/
 /* Front-page */
 .front-hero-image {
-  background-image: url("../../logos/inhabitent-logo-full.svg"), url("../../images/home-hero.jpg");
-  background-repeat: no-repeat, no-repeat;
-  background-size: auto, cover;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../../images/home-hero.jpg") no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../images/home-hero.jpg") no-repeat;
+  background-size: cover,cover;
+  margin-top: -2em;
   background-position: center, center;
   height: 700px; }
+
+.home .content-area .logo img {
+  position: absolute;
+  right: 500px;
+  top: 200px; }
 
 .site-main .post-info {
   display: -webkit-box;
@@ -836,7 +848,8 @@ h2 {
     margin-top: 15px;
     display: block; }
   .latest-adventures .one {
-    background-image: url("../../images/adventure-photos/canoe-girl.jpg");
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../../images/adventure-photos/canoe-girl.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../images/adventure-photos/canoe-girl.jpg");
     background-size: cover;
     height: 600px;
     grid-column: 1 / 2;
@@ -849,7 +862,8 @@ h2 {
   .latest-adventures .two {
     border-left: 10px white solid;
     border-bottom: 20px solid white;
-    background-image: url("../../images/adventure-photos/beach-bonfire.jpg");
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../../images/adventure-photos/beach-bonfire.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../images/adventure-photos/beach-bonfire.jpg");
     background-size: cover;
     grid-column: 2 / 4;
     grid-row: 1 / 2;
@@ -858,7 +872,8 @@ h2 {
     background-color: rgba(0, 0, 0, 0.35);
     padding-right: 2em; }
   .latest-adventures .three {
-    background-image: url("../../images/adventure-photos/mountain-hikers.jpg");
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../../images/adventure-photos/mountain-hikers.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../images/adventure-photos/mountain-hikers.jpg");
     background-size: cover;
     grid-column: 2 / 3;
     grid-row: 2 / 3;
@@ -870,7 +885,8 @@ h2 {
     padding-left: 1em;
     padding-right: 2em; }
   .latest-adventures .four {
-    background-image: url("../../images/adventure-photos/night-sky.jpg");
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../../images/adventure-photos/night-sky.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../images/adventure-photos/night-sky.jpg");
     background-size: cover;
     grid-column: 3 / 4;
     background-color: rgba(0, 0, 0, 0.35);
@@ -1016,6 +1032,9 @@ h2 {
 .post-type-archive .front-logo {
   background-image: url(../../logos/inhabitent-logo-tent.svg); }
 
+.archive .type-product .entry-title {
+  padding-left: 0; }
+
 .post-type-archive .product-chunk {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1063,24 +1082,118 @@ h2 {
   display: none; }
 
 .single-product .main-navigation a {
-  color: #248A83;
-  border-bottom: 1px solid #e1e1e1; }
+  color: #248A83; }
 
 .single-product .front-logo {
   background-image: url(../../logos/inhabitent-logo-tent.svg); }
 
-.blog .entry-title {
-  position: absolute;
-  bottom: 295px;
-  left: -70px;
+.primary-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.single-product img {
+  margin-left: 10em;
+  height: 300px;
+  width: 450px;
+  margin-top: 4em; }
+
+.single-product .site-header {
+  border-bottom: 1px solid #e1e1e1; }
+
+.single-product .product-bundle {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.type-product .entry-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.product-specific {
+  margin-top: 8em;
+  margin-left: 2em; }
+
+.type-product .entry-content {
+  margin-right: 10em; }
+
+.post-type-archive .type-product .entry-title {
+  min-width: 500px;
+  padding-top: 1em;
+  text-align: left;
+  padding-left: 0;
+  font-weight: 800; }
+
+.type-product .entry-title {
+  min-width: 500px;
+  padding-top: 1em;
+  text-align: left;
+  padding-left: 80px;
+  font-weight: 800; }
+  .type-product .entry-title a {
+    text-decoration: none;
+    color: #d99054; }
+
+.pricing {
+  font-weight: 800; }
+
+.socials {
+  margin-left: 43em;
+  padding-bottom: 2em; }
+  .socials i span {
+    text-transform: uppercase;
+    font-family: 'Novecento Sans Web';
+    padding: 5px; }
+
+.blog
+.entry-title {
+  position: relative;
+  bottom: 436px;
   width: 450px;
   left: 138px;
   background-color: #248a83;
   height: 100px; }
-  .blog .entry-title a {
-    color: white;
-    font-size: 30px;
-    text-decoration: none; }
+
+.single .entry-meta {
+  position: relative;
+  bottom: 214px;
+  color: #fff;
+  font-size: 14px;
+  left: 350px;
+  background-color: #248a83;
+  width: 400px;
+  text-transform: uppercase; }
+
+.blog .single .entry-title {
+  position: relative;
+  bottom: 436px;
+  width: 450px;
+  background-color: #248a83;
+  height: 100px; }
+  .blog .single .entry-title a {
+    text-decoration: none;
+    color: white; }
+
+.blog .single .entry-header {
+  height: 550px; }
+
+.single .entry-content {
+  font-size: 14px; }
+
+.single .entry-footer {
+  font-family: 'Novecento Sans Web'; }
+  .single .entry-footer a {
+    text-decoration: none;
+    color: #248a83; }
+
+.blog .entry-header {
+  height: 450px; }
+
+.blog .entry-title a {
+  color: white;
+  font-size: 30px;
+  text-decoration: none; }
 
 .blog .main-navigation a {
   color: #248A83; }
@@ -1097,13 +1210,13 @@ h2 {
 .blog .site-header {
   border-bottom: 1px solid #e1e1e1; }
 
-.single {
+.blog .single {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex; }
-  .single .content-area {
+  .blog .single .content-area {
     width: 70%; }
-  .single .widget-area {
+  .blog .single .widget-area {
     -webkit-box-orient: vertical;
     -webkit-box-direction: reverse;
         -ms-flex-direction: column-reverse;
@@ -1116,16 +1229,41 @@ h2 {
     text-align: left;
     margin-top: 0; }
 
-.entry-header {
-  position: relative;
-  padding-top: 50px; }
+.single-post .entry-header {
+  position: relative; }
 
-.entry-meta {
-  position: absolute;
-  bottom: 65px;
+.single-post .entry-title {
+  position: relative;
+  bottom: 436px;
+  width: 450px;
+  background-color: #248a83;
+  height: 100px; }
+  .single-post .entry-title a {
+    color: white;
+    text-decoration: none; }
+
+.single-post .product-bundle {
+  height: 550px; }
+
+.single-post .entry-content {
+  margin-right: 10em;
+  margin-left: -2em; }
+
+.single-post .comments-area {
+  margin-right: 8em; }
+
+.single-post .socials {
+  margin-left: 0;
+  margin-top: 10px; }
+
+.single-post .product-specific {
+  margin-top: 0; }
+
+.blog .entry-meta {
+  position: relative;
+  bottom: 214px;
   color: #fff;
   font-size: 14px;
-  left: 380;
   left: 378px;
   background-color: #248a83;
   width: 400px;
@@ -1135,9 +1273,24 @@ h2 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-top: 50px; }
+  margin-top: 50px;
+  width: 70%; }
   .single-main img {
     width: 750px; }
+
+.blog .entry-content p {
+  padding-left: 0; }
+
+.blog button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: 135px; }
+
+.single-post .site-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
 
 .single-post .content-area {
   padding-top: 40px;
@@ -1150,14 +1303,23 @@ h2 {
 .single-post .front-logo {
   background-image: url(../../logos/inhabitent-logo-tent.svg); }
 
-.single-post .main-navigation {
+.single-post .site-header {
   border-bottom: 1px solid #e1e1e1; }
 
-.type-post p {
+.blog .type-post p {
   margin-left: 9em;
   margin-right: 2em;
   font-size: 15px;
   text-align: left; }
+
+.type-page .entry-header {
+  display: none;
+  text-transform: uppercase;
+  font-family: 'Novecento Sans Web';
+  font-size: 1.3em; }
+
+.type-page .hero-image-header {
+  margin-top: -2em; }
 
 .page {
   text-align: center;
@@ -1165,12 +1327,9 @@ h2 {
   display: -ms-flexbox;
   display: flex; }
 
-.page .entry-content {
-  padding-left: 10em;
-  padding-right: 10em; }
-
-.page .entry-title {
-  display: none; }
+.page-id-32 .entry-content p {
+  padding-right: 10em;
+  padding-left: 10em; }
 
 .page-id-51 .main-navigation a {
   color: #248A83; }
@@ -1184,6 +1343,7 @@ h2 {
 .title-findus {
   padding-top: 50px;
   margin-bottom: 0;
+  margin-left: -145px;
   width: 600px; }
   .title-findus h2 {
     font-weight: 800;
@@ -1205,3 +1365,7 @@ h2 {
 .contact-sidebar span {
   color: #248A83;
   padding-left: 5px; }
+
+.findusmap {
+  height: 15em;
+  width: 500px; }
