--- a/themes/inhabitent-theme/sass/_content.scss
+++ b/themes/inhabitent-theme/sass/_content.scss
@@ -68,6 +68,11 @@ h2{
   }
 }
 
+.contact-info a{
+  color:white;
+
+}
+
 .tent_biz_hours-class{
   font-size:14px;}
   .day-of-week{
@@ -80,4 +85,8 @@ h2{
     text-decoration:none;
    }
 
+  }
+
+  .cat-links{
+    padding-right:15px;
   }
