--- a/themes/inhabitent-theme/sass/_page-templates.scss
+++ b/themes/inhabitent-theme/sass/_page-templates.scss
@@ -5,13 +5,27 @@
 /* Front-page */
 
 .front-hero-image {
-  background-image:url('../../logos/inhabitent-logo-full.svg'),
- url('../../images/home-hero.jpg');
-  background-repeat: no-repeat, no-repeat;
-  background-size: auto, cover;
+  background:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),
+ url('../../images/home-hero.jpg')no-repeat;
+ background-size:cover,cover;
+ margin-top: -2em;
   background-position: center, center;
   height: 700px;
+  
 }
+.home{
+.content-area {
+  .logo{
+  img{
+  position: absolute;
+  right:500px;
+  top:200px;
+  }
+}
+}
+}
+  
+
 
 
 .site-main {
@@ -38,11 +52,11 @@
   .journal-title{
         text-align: left;
         font-size: 20px;
-        color: #248a83;
+        color: $color__baackground;
         text-transform: uppercase;
         font-weight: 600;
         height: 70px;
-        font-family: 'Novecento Sans Web';
+        font-family: $font__fam-main;
         padding-left: 10px;
     }
   }
@@ -50,7 +64,7 @@
 h2{
 
   text-transform:uppercase;
-  font-family: 'Novecento Sans Web';
+  font-family: $font__fam-main;
   font-weight:200px;
   
 }
@@ -72,10 +86,6 @@ a{
 }
   }
 
-
-
-
-
 .hero-image-header {
   height: 700px;
 }
@@ -87,7 +97,7 @@ a{
 .adventure-but{
   margin-right: 875px;
   margin-bottom: 5em;
-  background-color: #248a83;
+  background-color: $color__baackground;
   height: 45px;
   width: 200px;
   text-transform: uppercase;
@@ -119,7 +129,7 @@ a{
  
   
   .one{
-    background-image: url('../../images/adventure-photos/canoe-girl.jpg');
+    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('../../images/adventure-photos/canoe-girl.jpg');
     background-size: cover;
     height: 600px;
     grid-column: 1 / 2;
@@ -133,7 +143,7 @@ a{
   .two{
     border-left: 10px white solid;
     border-bottom: 20px solid white;
-    background-image: url('../../images/adventure-photos/beach-bonfire.jpg');
+    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('../../images/adventure-photos/beach-bonfire.jpg');
     background-size: cover;
     grid-column: 2 / 4;
     grid-row: 1 / 2;padding-top: 1em;
@@ -143,7 +153,7 @@ a{
   }
 
   .three{
-    background-image: url('../../images/adventure-photos/mountain-hikers.jpg');
+    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('../../images/adventure-photos/mountain-hikers.jpg');
     background-size: cover;
     grid-column: 2 / 3;
     grid-row: 2 / 3;
@@ -157,7 +167,7 @@ a{
   }
 
   .four{
-    background-image:url('../../images/adventure-photos/night-sky.jpg');
+    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url('../../images/adventure-photos/night-sky.jpg');
     background-size: cover;
     grid-column:3 / 4;
     background-color: rgba(0,0,0,.35);
@@ -240,7 +250,7 @@ a{
     font-size: 14px;
     padding-top: 50px;
     margin-bottom:0;
-    font-family: Novecento Sans Web;
+    font-family:$font__fam-main
     font-weight: 200;
   }
 
@@ -329,6 +339,7 @@ a{
 
 .shop-push{
   padding-top: 40px;
+  margin-top: 90px;
   h2{
     font-weight: 800;
   }
@@ -345,7 +356,9 @@ a{
   background-image: url(../../logos/inhabitent-logo-tent.svg);
 }
 
-
+.archive .type-product .entry-title{
+  padding-left:0;
+}
 
 .post-type-archive {
 
@@ -361,7 +374,7 @@ justify-content: space-around;
   color:#248A83;
   text-transform:uppercase;
   text-decoration:none;
-  font-family: 'Novecento Sans Web';
+  font-family: $font__fam-main;
   font-size:18px;
 }
 }
@@ -394,7 +407,7 @@ justify-content: space-around;
   font-weight: 800;
   font-size: 35px;
   text-transform:uppercase;
-  font-family: 'Novecento Sans Web';
+  font-family: $font__fam-main;
 }
 .page-title{
   text-align: center;
@@ -406,33 +419,136 @@ justify-content: space-around;
   }
   .main-navigation a{
     color:#248A83;
-    border-bottom: 1px solid #e1e1e1;
+    
   }
   .front-logo{
     background-image: url(../../logos/inhabitent-logo-tent.svg);
   } 
   
-
 }
 
-//**journal page
+.primary-content{
+  display:flex;
+}
 
-.blog .entry-title{
-  position: absolute;
-  bottom: 295px;
-  left: -70px;
+.single-product img{
+  margin-left: 10em;
+  height: 300px;
   width: 450px;
-  left: 138px;
-  background-color: #248a83;
-  height: 100px;
+  margin-top: 4em;
+}
+.single-product .site-header{
+  border-bottom: 1px solid #e1e1e1;
+}
 
+.single-product .product-bundle{
+  display: flex;
+}
+.type-product .entry-header{
+  display:flex;
+}
+.product-specific{
+  margin-top: 8em;
+    margin-left: 2em;
+
+}
+.type-product .entry-content{
+  margin-right: 10em;
+}
+
+.post-type-archive .type-product .entry-title{
+  min-width: 500px;
+  padding-top: 1em;
+  text-align: left;
+  padding-left: 0;
+  font-weight: 800;
+}
+.type-product .entry-title{
+  min-width: 500px;
+  padding-top: 1em;
+  text-align: left;
+  padding-left: 80px;
+  font-weight: 800;
 
   a{
+    text-decoration:none;
+    color:#d99054;
+  }
+}
+
+.pricing{
+  font-weight:800;
+}
+
+.socials{
+  margin-left: 43em;
+    padding-bottom: 2em;
+    i span{
+      text-transform:uppercase;
+      font-family: $font__fam-main;
+      padding:5px;
+    }
+}
+//**journal page
+
+.blog
+ .entry-title{
+  position: relative;
+  bottom: 436px;
+  width: 450px;
+  left: 138px;
+  background-color: $color__baackground;
+  height: 100px;
+}
+
+.single .entry-meta{
+  position: relative;
+  bottom: 214px;
+  color: #fff;
+  font-size: 14px;
+  left: 350px;
+  background-color: $color__baackground;
+  width: 400px;
+  text-transform: uppercase;
+}
+.blog .single .entry-title{
+  position: relative;
+  bottom: 436px;
+  width: 450px;
+  background-color: $color__baackground;
+  height: 100px;
+
+  a{
+    text-decoration:none;
+    color:white;
+  }
+
+}
+ .blog .single .entry-header{
+  height: 550px;
+}
+.single .entry-content{
+  font-size:14px;
+}
+.single .entry-footer{
+
+  font-family: $font__fam-main;
+  a{
+    text-decoration:none;
+    color:$color__baackground;
+  }
+  
+}
+.blog .entry-header{
+  height: 450px;
+}
+
+  .blog .entry-title a{
     color:white;
     font-size:30px;
     text-decoration:none;
   }
-}
+
 
 .blog .main-navigation a{
   color:#248A83;
@@ -453,7 +569,7 @@ justify-content: space-around;
   }
   }
 
-.single{
+.blog .single{
   display:flex;
   .content-area{
     width:70%;
@@ -468,32 +584,82 @@ justify-content: space-around;
   }
 
 }
-.entry-header{
+.single-post .entry-header{
   position:relative;
-  padding-top: 50px;
+  
 }
 
-.entry-meta{
-  position: absolute;
-  bottom: 65px;
+
+.single-post {
+  .entry-title{
+    position: relative;
+    bottom: 436px;
+    width: 450px;
+    background-color: $color__baackground;
+    height: 100px;
+    a{
+      color:white;
+    text-decoration:none;
+    }
+  }
+}
+.single-post .product-bundle{
+  height: 550px;
+}
+
+.single-post {
+.entry-content{
+  margin-right: 10em;
+  margin-left: -2em;
+}
+
+}
+
+.single-post .comments-area{
+ 
+  margin-right: 8em;
+}
+.single-post .socials{
+  margin-left:0;
+  margin-top:10px;
+}
+.single-post .product-specific{
+  margin-top:0;
+}
+.blog .entry-meta{
+  position: relative;
+  bottom: 214px;
   color: #fff;
   font-size: 14px;
-  left: 380;
   left: 378px;
-  background-color: #248a83;
+  background-color: $color__baackground;
   width: 400px;
   text-transform: uppercase;
 }
 
+
 .single-main{
   display:flex;
   margin-top: 50px;
+  width:70%;
 
   img{
     width:750px;
   }
 }
 
+.blog .entry-content p{
+  padding-left:0;
+}
+.blog button{
+  display: flex;
+  margin-left: 135px;
+ 
+}
+
+.single-post .site-content{
+  display: flex;
+}
 .single-post{
   .content-area{
     padding-top: 40px;
@@ -507,12 +673,12 @@ justify-content: space-around;
   .front-logo{
     background-image: url(../../logos/inhabitent-logo-tent.svg);
   } 
-  .main-navigation{
+  .site-header{
     border-bottom: 1px solid #e1e1e1;
   }
  
 }
-.type-post p{
+.blog .type-post p{
   margin-left: 9em;
   margin-right: 2em;
   font-size: 15px;
@@ -521,14 +687,18 @@ justify-content: space-around;
 }
 //** about page
 
-// .about-hero-image {
-//   background-image: url(../../images/about-hero.jpg);
-//   height: 700px;
-//   background-size: cover;
-//   background-position-y: bottom;
-//   background-repeat: no-repeat;
-// }
 
+.type-page .entry-header{
+  display:none;
+  text-transform: uppercase;
+  font-family: $font__fam-main;
+  font-size: 1.3em;
+
+}
+
+.type-page .hero-image-header{
+  margin-top: -2em;
+}
 
 .page{
   text-align:center;
@@ -538,14 +708,13 @@ justify-content: space-around;
 
 
 
-.page .entry-content{
-  padding-left:10em;
+.page-id-32 .entry-content p{
   padding-right:10em;
+  padding-left:10em;
 }
 
-.page .entry-title{
-  display:none;
-}
+
+
 
 //**find us page
 
@@ -568,8 +737,7 @@ justify-content: space-around;
 .title-findus{
   padding-top: 50px;
   margin-bottom: 0;
-  
-    
+  margin-left: -145px;
     width: 600px;
     
     h2{
@@ -594,7 +762,7 @@ h2{
 .wpcf7-form{
   label{
     text-transform:uppercase;
-    font-family: 'Novecento Sans Web';
+    font-family: $font__fam-main;
 
   }
 }
@@ -604,4 +772,9 @@ h2{
     color:#248A83;
     padding-left:5px;
   }
+}
+
+.findusmap{
+  height:15em;
+  width:500px;
 }
